--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,7 @@ body {
 }
 
 /* Common */
+
 .container {
     width: 1170px;
     max-width: calc(100% - 48px);
@@ -29,12 +30,47 @@ body {
     margin-right: auto;
 }
 
+a {
+    text-decoration: none;
+}
+
+.btn {
+    --height: 60px;
+
+    display: inline-block;
+    min-width: 205px;
+    border-radius: 30px;
+    border: 1px solid #2e80ce;
+    background: #2e80ce;
+    color: #fff;
+    height: var(--height);
+    line-height: var(--height);
+    padding: 0 15px;
+    font-weight: 400;
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.btn:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
 /* Header */
 .header {
     min-height: 100vh;
     /* để min để khi nội dung tăng lên thì nó tự động thay đổi cho phù hợp */
     background: var(--header-bg);
+    padding-top: 30px;
 }
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Logo */
 
 .logo {
     font-size: 1rem;
@@ -83,4 +119,44 @@ body {
 .logo__brand--small {
     font-size: 1.2em;
     font-weight: 300;
+}
+
+/* Navbar */
+
+.navbar__list {
+    display: flex;
+}
+
+.action__login,
+.navbar__link {
+    padding: 4px 21px;
+    /* padding trên dưới để tăng khoảng cách bấm */
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #c9d2da;
+}
+
+.navbar__link:hover,
+.navbar__link--active {
+    color: #fff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.navbar__link--active::before {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #fff;
+    position: relative;
+    top: -2px;
+    left: -8px;
+}
+
+/* Action */
+.action__signup {
+    --height: 44px;
+    min-width: 104px;
+    font-size: 1.6rem;
 }
