--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,6 +65,22 @@ a {
     color: #c9d2da;
     font-weight: 300;
     line-height: 1.66;
+    font-size: 1.8rem;
+}
+
+.section-heading {
+    color: #10375c;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.section-desc {
+    color: #575f66;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.66;
 }
 
 /* Header */
@@ -245,4 +261,139 @@ a {
     height: 410px;
     border-radius: 0px 6px 6px 0px;
     object-fit: cover;
+}
+
+/* Service */
+.service {
+    padding: 170px 0;
+    min-height: 100vh;
+}
+
+.service-heading,
+.service-desc {
+    text-align: center;
+}
+
+.service-desc {
+    width: 468px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.service__info {
+    display: flex;
+    margin-top: 70px;
+    align-items: center;
+}
+
+.service__info--image {
+    width: 48%;
+}
+
+.service__img {
+    width: 570px;
+    height: 570px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.service__all-service {
+    flex-grow: 1;
+    justify-content: flex-end;
+    margin-left: 130px;
+}
+
+.service-item {
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    background: #fff;
+    width: 470px;
+    padding: 22px;
+    transition: 0.25s;
+}
+
+.service-item:hover {
+    position: relative;
+    /* khi không có position: relative thì di chuột vào các bóng đổ của nó không đè lên được mấy thắng khác nên phải thêm vào */
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+}
+
+.service-item__heading {
+    color: #10375c;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.service-item__desc {
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+    width: 351px;
+}
+
+.section-btn {
+    margin-top: 55px;
+}
+
+/* How it works */
+
+.works {
+    background: #f6fbff;
+    min-height: 100vh;
+    padding: 100px 0;
+}
+
+.works-desc {
+    width: 468px;
+    margin-top: 18px;
+}
+
+.works__info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    margin-top: 86px;
+}
+
+.works-item {
+    border-radius: 4px;
+    background: #fff;
+    align-items: center;
+    border: 16px solid #EAF6FF;
+    padding: 43px 42px;
+    transition: 0.25s;
+}
+
+.works-item:hover{
+    border: 16px solid #2E80CE;
+    transform: translateY(-16px);
+    /* cái ở trên để khi hover vào thì nó nhảy lên 1 xí, X là ngang Y là dọc */
+}
+
+.works-item__heading {
+    color: #10375c;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-top: 18px;
+    margin-bottom: 28px;
+}
+
+.works-item__learn,
+.works-item__desc {
+    color: #575f66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 1.75;
+}
+
+.works-item__desc {
+    margin-bottom: 18px;
+}
+
+.works-item__learn {
+    margin-bottom: 43px;
+    color: #2E80CE;
 }
