--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,6 +83,37 @@ a {
     line-height: 1.66;
 }
 
+.control {
+    margin-top: 28px;
+    display: flex;
+    gap: 18px;
+}
+
+.control__btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #575f66;
+    color: #575f66;
+    outline: none;
+    background: #fff;
+    transition: 0.25s;
+}
+
+.control__btn:hover {
+    background: #2e80ce;
+    border-color: #2e80ce;
+    color: #fff;
+    cursor: pointer;
+}
+
+.control__next {
+    rotate: 180deg;
+}
+
 /* Header */
 .header {
     min-height: 100vh;
@@ -503,35 +534,7 @@ a {
 }
 
 .member__control {
-    display: flex;
     justify-content: center;
-    margin-top: 38px;
-    gap: 18px;
-}
-
-.member__control-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border: 1px solid #575f66;
-    color: #575f66;
-    outline: none;
-    background: #fff;
-    transition: 0.25s;
-}
-
-.member__control-btn:hover {
-    background: #2e80ce;
-    border-color: #2e80ce;
-    color: #fff;
-    cursor: pointer;
-}
-
-.member__control-next {
-    rotate: 180deg;
 }
 
 /* Install */
@@ -588,3 +591,144 @@ a {
     column-gap: 28px;
 }
 
+/* News */
+
+.news {
+    margin-top: 85px;
+    padding: 85px 0;
+}
+
+.news__body {
+    background: #fff;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.news__info {
+    width: 40%;
+}
+
+.news__heading {
+    color: #10375c;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+    margin-top: 68px;
+    margin-bottom: 28px;
+    display: inline-block;
+    width: 459px;
+}
+
+.news__link {
+    display: inline-block;
+    color: #10375c;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.5;
+    text-decoration-line: underline;
+    text-underline-offset: 5px;
+    /* dòng trên là độ xâu của dòng gạch chân */
+}
+
+.news__medicine {
+    display: flex;
+    gap: 30px;
+}
+
+.news__medicine-info {
+    width: 270px;
+    height: 375px;
+    border-radius: 12px;
+    border: 1px solid #e8ebee;
+    transition: 0.25s;
+}
+
+.news__medicine-info:hover {
+    box-shadow: 0px 18px 50px 0px rgba(0, 0, 0, 0.05);
+    transform: translateY(-8px);
+}
+
+.news__medicine-info:hover .medicine-info__body {
+    border-color: #fff;
+}
+
+.medicine-info__image {
+    width: 100%;
+    height: 172px;
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+    display: block;
+    /* phía dưới bức ảnh sẽ có 1 dấu cách nên phải để display block để loại bỏ */
+}
+
+.medicine-info__body {
+    padding: 24px;
+    border: 1px solid #e8ebee;
+    border-top: none;
+    background: #fff;
+    border-radius: 0 0 12px 12px;
+    transition: 0.25s;
+}
+
+.medicine-info__heading {
+    color: #10375c;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.6;
+}
+
+.medicine-info__desc {
+    color: #575f66;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.7;
+    margin-top: 10px;
+    margin-bottom: 12px;
+    width: 226px;
+}
+
+.medicine-info__link {
+    color: #10375c;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.medicine-info__link:hover {
+    color: #2e80ce;
+}
+
+/* Appointment */
+
+.appointment__body {
+    background: #f6fbff;
+    height: 452px;
+    padding: 100px 179px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.appointment__heading {
+    padding-bottom: 18px;
+    position: relative;
+}
+
+.appointment__heading::after {
+    display: inline-block;
+    content: "";
+    width: 136px;
+    height: 2px;
+    background: #2e80ce;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+}
+
+.appointment__desc {
+    margin: 18px auto 38px auto;
+    max-width: 617px;
+}
